--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -38,9 +38,9 @@
       name: common
       tasks_from: systemd-setup
 
-  - name: Deployment
-    tags: #While using tags imprt role is preferble compared to imclude role,
-    - deployment #as include role does not effect to entire tasks when we are using tags.
-    import_role:
-      name: common
-      tasks_from: deployment
+  # - name: Deployment
+  #   tags: #While using tags imprt role is preferble compared to imclude role,
+  #   - deployment #as include role does not effect to entire tasks when we are using tags.
+  #   import_role:
+  #     name: common
+  #     tasks_from: deployment
