--- a/roles/catalogue/vars/main.yaml
+++ b/roles/catalogue/vars/main.yaml
@@ -1,5 +1,5 @@
 
-  MONGODB_HOST: mongodb-dev.devsecopstrainee.site
+  MONGODB_HOST: mongodb-{{ env }}.devsecopstrainee.site
 
 #This value will be added to catalogue.service.jinja2 template
 #Form dev to qa, qa to produuction the hostanme will changes so theat we will taken as variables
