--- a/roles/payment/vars/main.yaml
+++ b/roles/payment/vars/main.yaml
@@ -1,6 +1,6 @@
-CART_HOST: cart.devsecopstrainee.site
-USER_HOST: user.devsecopstrainee.site
-RABBITMQ_HOST: rabbitmq.devsecopstrainee.site
+CART_HOST: cart-{{ env }}.devsecopstrainee.site
+USER_HOST: user-{{ env }}.devsecopstrainee.site
+RABBITMQ_HOST: rabbitmq-{{ env }}.devsecopstrainee.site
 
 RABBITMQ_USER: roboshop
 RABBITMQ_PASSWORD: roboshop123
