--- a/roles/user/vars/main.yaml
+++ b/roles/user/vars/main.yaml
@@ -1,5 +1,5 @@
-MONGODB_HOST: mongodb.devsecopstrainee.site
-REDIS_HOST: redis.devsecopstrainee.site
+MONGODB_HOST: mongodb-{{ env }}.devsecopstrainee.site
+REDIS_HOST: redis-{{ env }}.devsecopstrainee.site
 
 #This value will be added to user.service.jinja2 template
-#Form dev to qa, qa to produuction the hostanme will changes so theat we will taken as variables 
+#Form dev to qa, qa to produuction the hostanme will changes so theat we will taken as variables -{{ env }}
