--- a/roles/shipping/vars/main.yaml
+++ b/roles/shipping/vars/main.yaml
@@ -1,2 +1,4 @@
 CART_HOST: cart-{{ env }}.devsecopstrainee.site
 MYSQL_HOST : mysql-{{ env }}.devsecopstrainee.site
+MYSQL_ROOT_USER: root
+MYSQL_ROOT_PASSWORD: RoboShop@1
