--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -1,29 +1,27 @@
-  - name: app_setup
-    include_role:
-      name: common
-      tasks_from: app-setup
+- name: app setup
+  include_role:
+    name: common
+    tasks_from: app-setup
 
-  - name: maven_setup
-    include_role:
-      name: common
-      tasks_from: maven-setup
+- name: maven setup
+  include_role:
+    name: common
+    tasks_from: maven
 
-  - name: import data
-    tags: # tags are used to run particualr block of code, while running the script in ansible server we have to give -t tagName
-    - import
-    community.mysql.mysql_db:
-      name: all
-      login_user: "{{ MYSQL_ROOT_USER }}"
-      login_password: "{{ MYSQL_ROOT_PASSWORD }}"
-      login_host: "{{ MYSQL_HOST }}"
-      state: import
-      target: "{{ item }}"
-    loop:
-    - /app/db/schema.sql
-    - /app/db/app-user.sql
-    - /app/db/master-data.sql
+- name: import data
+  community.mysql.mysql_db:
+    name: all
+    login_user: "{{ MYSQL_ROOT_USER }}"
+    login_password: "{{ MYSQL_ROOT_PASSWORD }}"
+    login_host: "{{ MYSQL_HOST }}"
+    state: import
+    target: "{{ item }}"
+  loop:
+  - /app/db/schema.sql
+  - /app/db/app-user.sql
+  - /app/db/master-data.sql
 
-  - name: systemdSetup
-    include_role: 
-      name: common
-      tasks_from: systemd-setup
+- name: systemd setup
+  include_role:
+    name: common
+    tasks_from: systemd
