--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -1,5 +1,5 @@
-CATALOGUE_HOST: catalogue-{{ env }}.devsecopstrainee.site
-USER_HOST: user-{{ env }}.devsecopstrainee.site
-CART_HOST: cart-{{ env }}.devsecopstrainee.site
-SHIPPING_HOST: shipping-{{ env }}.devsecopstrainee.site
-PAYMENT_HOST: payment-{{ env }}.devsecopstrainee.site
+CATALOGUE_HOST: catalogue.backend-{{ env }}.devsecopstrainee.site
+USER_HOST: user.backend-{{ env }}.devsecopstrainee.site
+CART_HOST: cart.backend-{{ env }}.devsecopstrainee.site
+SHIPPING_HOST: shipping.backend-{{ env }}.devsecopstrainee.site
+PAYMENT_HOST: payment.backend-{{ env }}}.devsecopstrainee.site
