--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -9,6 +9,8 @@
     tasks_from: maven-setup
 
 - name: import data
+  tags:
+  - import
   community.mysql.mysql_db:
     name: all
     login_user: "{{ MYSQL_ROOT_USER }}"
